# pyrelite

./: .gitmodules  CMakeLists.txt  README.md  pyrelite.js
.github/actions/build-web/: action.yml
.github/workflows/: ci.yml  deploy.yml  preview.yml
app/: AudioController.qml  BombSprite.qml  CMakeLists.txt  EnemySprite.qml  FlameSprite.qml  GenerateVersion.cmake  Main.qml  PerkCrystalSprite.qml  PlayerSprite.qml  PowerUpSprite.qml  TerrainTile.qml  board_model.cpp  board_model.h  main.cpp  sound_player.cpp  sound_player.h  version.h.in
app/sounds/: bomb_place.sfx  enemy_down.sfx  explosion.sfx  game_over.sfx  level_up.sfx  pickup.sfx  step.sfx
core/: CMakeLists.txt  arena.cpp  arena.h  bouncer.cpp  bouncer.h  bounded_terrain.h  chaser.cpp  chaser.h  chunk.h  delta_store.h  enemy.cpp  enemy.h  fixed_timestep.cpp  fixed_timestep.h  game.cpp  game.h  ghost.h  grid.cpp  grid.h  hunter.cpp  hunter.h  ienemy.h  igame.h  irng.h  iterrain.h  movement.h  rng.cpp  rng.h  wanderer.cpp  wanderer.h  world.cpp  world.h  world_gen.cpp  world_gen.h
core/enemies/: bouncer.cpp  bouncer.h  chaser.cpp  chaser.h  enemy.cpp  enemy.h  ghost.h  hunter.cpp  hunter.h  ienemy.h  wanderer.cpp  wanderer.h
core/game/: fixed_timestep.cpp  game.cpp  game.h  zone_spawns.cpp  zone_spawns.h
core/grid/: grid.cpp  grid.h
core/rng/: rng.cpp  rng.h
core/terrain/: arena.cpp  arena.h  bounded_terrain.h  iterrain.h
core/world/: chunk.h  delta_store.h  world.cpp  world.h  world_gen.cpp  world_gen.h  zone.h  zone_cache.h
pr-preview/pr-33/: index.html  pyrelite.js
pr-preview/pr-34/: pyrelite.js
tests/: CMakeLists.txt  arena_test.cpp  bomb_test.cpp  death_test.cpp  enemy_ai_test.cpp  enemy_test.cpp  explosion_test.cpp  fixed_timestep_test.cpp  game_test.cpp  grid_test.cpp  input_validation_test.cpp  movement_test.cpp  power_up_test.cpp  progression_test.cpp  rng_test.cpp  streamed_game_test.cpp  world_gen_test.cpp  world_test.cpp
tests/enemies/: enemy_ai_test.cpp  enemy_test.cpp
tests/game/: bomb_test.cpp  death_test.cpp  explosion_test.cpp  fixed_timestep_test.cpp  game_test.cpp  input_validation_test.cpp  perk_ability_test.cpp  power_up_test.cpp  progression_test.cpp  score_test.cpp  zone_spawns_test.cpp
tests/grid/: grid_test.cpp  movement_test.cpp
tests/rng/: rng_test.cpp
tests/terrain/: arena_test.cpp
tests/world/: streamed_game_test.cpp  world_gen_test.cpp  world_test.cpp
